feat: Implement `GetAllTicketsService` using a new `TicketTypeRepository` and add database indexes for improved ticket retrieval.